# maxpyder

./: CMakeLists.txt  README.md
app/backend/: Serv.go
app/backend/templates/: index.html
app/lib/games/chess/src/: main.cpp
app/lib/games/chess/src/lib/: Board.cpp  Board.h  BoardBuilder.cpp  BoardBuilder.h  Cell.cpp  Cell.h  CellColor.h  Color.h  Figure.cpp  Figure.h  GameController.cpp  GameController.h  Move.cpp  Move.h  Piece.h  Player.cpp  Player.h  PlayerColor.h  utils.cpp
